# dir-tree

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
dir_tree/: __init__.py  core.py
tests/: test_dir_tree.py
